# mcp-client

./: .gitignore  client.py  gpt_oss_with_groq_basics.py  main.py  pyproject.toml  rephraser.py
